network/policies/allow-traffic-to-kube-dns/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-to-kube-dns
  annotations:
    cenroq.io/displayName: "Allow Egress to Kube DNS"
    cenroq.io/description: "Allow DNS egress (TCP/UDP 53) to kube-dns/coredns in kube-system."
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchExpressions:
        - key: k8s-app
          operator: In
          values:
          - kube-dns
          - coredns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
